feat: unit test and status todo features

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,19 @@ version: "3.9"
 services:
   fastapi:
     build: .
-    ports:
-      - "8000:8000"
+    container_name: fastapi-app
     volumes:
       - ./app:/app/app
+      - ./tests:/app/tests
+      - ./htmlcov:/app/htmlcov
+    ports:
+      - "8000:8000"
     environment:
+      - PYTHONPATH=/app
       - DATABASE_URL=postgresql://postgres:postgres@db:5432/tododb
     depends_on:
       - db
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000
 
   db:
     image: postgres:15
