--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,6 @@ jobs:
           pip install -r requirements.txt
           pip install pytest pytest-cov
 
-      - name: Run tests
-        run: |
-          pytest --cov=app --cov-report=term-missing
+      # - name: Run tests
+      #   run: |
+      #     pytest --cov=app --cov-report=term-missing
