--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,11 @@
+name: Run Python Tests
+
+on:
+  push:
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -20,7 +28,8 @@ jobs:
       DATABASE_URL: postgresql://postgres:postgres@localhost:5432/testdb
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -31,7 +40,23 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pytest pytest-cov
+          pip install pytest pytest-cov psycopg2-binary
+
+      - name: Wait for PostgreSQL to be ready
+        run: |
+          echo "Waiting for PostgreSQL..."
+          until pg_isready -h localhost -p 5432 -U postgres; do
+            sleep 1
+          done
+          echo "PostgreSQL is ready."
+
+      - name: Run migrations (if any)
+        run: |
+          PYTHONPATH=. python -c "
+          from app.core.database import Base, engine
+          import app.models  # pastikan semua model terimport
+          Base.metadata.create_all(bind=engine)
+          "
 
       - name: Run tests
         run: |
