--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,7 @@ jobs:
       DATABASE_URL: postgresql://postgres:postgres@localhost:5432/testdb
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -40,24 +39,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pytest pytest-cov psycopg2-binary
+          pip install pytest pytest-cov
 
-      - name: Wait for PostgreSQL to be ready
+      - name: Run tests and generate coverage HTML
         run: |
-          echo "Waiting for PostgreSQL..."
-          until pg_isready -h localhost -p 5432 -U postgres; do
-            sleep 1
-          done
-          echo "PostgreSQL is ready."
+          PYTHONPATH=. pytest --cov=app --cov-report=html
 
-      - name: Run migrations (if any)
-        run: |
-          PYTHONPATH=. python -c "
-          from app.core.database import Base, engine
-          import app.models  # pastikan semua model terimport
-          Base.metadata.create_all(bind=engine)
-          "
-
-      - name: Run tests
-        run: |
-          PYTHONPATH=. pytest --cov=app --cov-report=term-missing
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v4
+        with:
+          name: html-coverage-report
+          path: htmlcov/
