--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI and Coverage to GitHub Pages
+name: Test and Upload Coverage to GitHub Pages
 
 on:
   push:
@@ -6,18 +6,36 @@ on:
   pull_request:
     branches: [main]
 
-permissions:
-  contents: write
-
 jobs:
-  test-and-deploy:
+  test:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write
+
+    services:
+      postgres:
+        image: postgres:15
+        ports: ["5432:5432"]
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: testdb
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+    env:
+      DATABASE_URL: postgresql://postgres:postgres@localhost:5432/testdb
+      PYTHONPATH: .
+
     steps:
-      - name: Checkout code
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
@@ -28,15 +46,14 @@ jobs:
           pip install -r requirements.txt
           pip install pytest pytest-cov
 
-      - name: Run tests and generate coverage report
+      - name: Run tests and generate coverage HTML
         run: |
           pytest --cov=app --cov-report=html
 
-      - name: List coverage report
-        run: ls -lah htmlcov
-
-      - name: Deploy HTML coverage to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
+      - name: Upload coverage to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./htmlcov
+          publish_branch: gh-pages
+          force_orphan: true
